Cache file location can be blank and prevent fluid simulation from reading baked data #51176

Closed
opened 2017-04-11 12:11:38 +02:00 by Todd J. York · 8 comments

System Information
Microsoft Windows 10 Professional, version 1607
Graphics card information omitted because of lack of relevance.

Blender Version
Broken: 2.78c (hash: e92f235283)

Short description of error
If the custom path specified contains space (or the file path contains space and the custom path is left blank), the baking will complete but the fluid domain object remains unchanged.

Exact steps for others to reproduce the error

  1. unzip the zip file and keep that file in its folder ("FEEL THE SPACE POWER", anyway make sure there is a space in its path)
  2. double check that the baking target path is left blank and bake
    FEEL THE SPACE POWER.zip
**System Information** Microsoft Windows 10 Professional, version 1607 Graphics card information omitted because of lack of relevance. **Blender Version** Broken: 2.78c (hash: e92f235283) **Short description of error** If the custom path specified contains space (or the file path contains space and the custom path is left blank), the baking will complete but the fluid domain object remains unchanged. **Exact steps for others to reproduce the error** 1. unzip the zip file and keep that file in its folder ("FEEL THE SPACE POWER", anyway make sure there is a space in its path) 2. double check that the baking target path is left blank and bake [FEEL THE SPACE POWER.zip](https://archive.blender.org/developer/F542403/FEEL_THE_SPACE_POWER.zip)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Todd-York

Added subscriber: @Todd-York
Aaron Carlisle changed title from Space in path prevents fluid simulation from reading baked data to Cache file location can be blank and prevent fluid simulation from reading baked data 2017-04-15 21:12:09 +02:00
Bastien Montagne was assigned by Aaron Carlisle 2017-04-15 21:12:09 +02:00
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

The issue is not the space in the path but that the bake location field can be blank.

The issue is not the space in the path but that the bake location field can be blank.

Can’t confirm that on linux, this is most likely an issue with Windows, Blender not being able to write simulation files in the auto-computed path (which seems to be mere current directory, not ideal, should rather be current .blend file directory probably…).

Can’t confirm that on linux, this is most likely an issue with Windows, Blender not being able to write simulation files in the auto-computed path (which seems to be mere current directory, not ideal, should rather be current .blend file directory probably…).
Member

@mont29 you are correct, I just tested on linux and had no issue.

@mont29 you are correct, I just tested on linux and had no issue.

This issue was referenced by 4621392353

This issue was referenced by 4621392353c24124a8fe9dc0d5a86c9331a7a0c1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51176
No description provided.